# django-sandbox

./: pyproject.toml
agreement/: admin.py  apps.py  models.py  urls.py  views.py
approvals/: admin.py  approvals.py  models.py  urls.py  views.py
djangosandbox/: asgi.py  settings.py  urls.py  wsgi.py
subscription/: admin.py  models.py  urls.py  views.py
templates/: render_agreement_signoffs.html  render_project_approval.html  render_simple_signoff.html  render_terms_signoff.html
terms_of_service/: admin.py  models.py  urls.py  views.py
test_stuff/: apps.py  models.py
