[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangosandbox"
dynamic = ["version"]
description = 'trial environment for signoffs'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "JacobTumak", email = "jacobtumak@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/JacobTumak/djangosandbox#readme"
Issues = "https://github.com/JacobTumak/djangosandbox/issues"
Source = "https://github.com/JacobTumak/djangosandbox"

[tool.hatch.version]
path = "src/djangosandbox/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/djangosandbox tests}"

[tool.coverage.run]
source_pkgs = ["djangosandbox", "tests"]
branch = true
parallel = true
omit = [
  "src/djangosandbox/__about__.py",
]

[tool.coverage.paths]
djangosandbox = ["src/djangosandbox", "*/djangosandbox/src/djangosandbox"]
tests = ["tests", "*/djangosandbox/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
